# srcds_console

./: .gitignore  Cargo.toml  README.md  install.ps1
.github/workflows/: release.yml
src/: hooks.rs  main.rs
